--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script defer src="./scripts/client.js"></script>
   <script src="./scripts/axios.js"></script>
-  <script src="./scripts/client.js"></script>
   <title>SQL TO-DO List</title>
 </head>
 <body>
@@ -13,5 +13,26 @@
     <h1>SQL TO-DO List</h1>
   </header>
 
+  <form>
+    <fieldset>
+      <legend>Tell Us What You Wanna Do</legend>
+      <input type="text" id="toDoTextInput" data-testid="toDoTextInput"/>
+      <button data-testid="submitButton" onclick="createTodo(event)">Add it to the list!</button>
+    </fieldset>
+  </form>
+
+  <h2>My TODOS:</h2>
+
+  <table>
+    <thead>
+      <tr>
+        <th>TODOs</th>
+        <th colspan="2">What You Can Do</th>
+      </tr>
+    </thead>
+    <tbody id="todoTbody">
+      <!-- this is where the new todos will go -->
+    </tbody>
+  </table>
 </body>
 </html>
