--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,38 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script defer src="./scripts/client.js"></script>
   <script src="./scripts/axios.js"></script>
   <title>SQL TO-DO List</title>
 </head>
+
 <body>
   <header>
-    <h1>SQL TO-DO List</h1>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+          <h1>SQL TO-DO List</h1>
+        </div>
+      </div>
+    </div>
   </header>
 
-  <form>
-    <fieldset>
-      <legend>Tell Us What You Wanna Do</legend>
-      <input type="text" id="toDoTextInput" data-testid="toDoTextInput"/>
-      <button data-testid="submitButton" onclick="createTodo(event)">Add it to the list!</button>
-    </fieldset>
-  </form>
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-md-8 text-center">
+        <form class="container-fluid">
+          <fieldset>
+            <div class="row">
+              <legend>Tell Us What You Wanna Do</legend>
+              <div class="col-9">
+                <input class="form-control" type="text" id="toDoTextInput" data-testid="toDoTextInput" />
+              </div>
+              <div class="col-3">
+                <button data-testid="submitButton" onclick="createTodo(event)" class="btn btn-success">Add</button>
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
 
-  <h2>My TODOS:</h2>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8 text-center">
+        <h2>My TODOS:</h2>
+      </div>
+    </div>
+  </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>TODOs</th>
-        <th colspan="2">What You Can Do</th>
-      </tr>
-    </thead>
-    <tbody id="todoTbody">
-      <!-- this is where the new todos will go -->
-    </tbody>
-  </table>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8 text-center">
+        <table id="todoTable">
+          <thead>
+            <tr>
+              <th>TODOs</th>
+              <th colspan="2">What You Can Do</th>
+            </tr>
+          </thead>
+          <tbody id="todoTbody">
+            <!-- this is where the new todos will go -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
